--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <html lang="pt-br">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meus objetivos do ano</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Meus objetivos do ano</title>
 
+</head>
+  <body>  
+    <section class="conteudo-principal">
+    <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+    <div class="botoes">
+      <button class="botao">Cursos na Alura</button>
+      <button class="botao">Criar projetos em JavaScript</button>
+      <button class="botao">Criar um portfólio</button>
+      <button class="botao">Atualizar meu currículo</button>
+    </div>
+  </section>
+
+</body>
+
+
+</html>
